# docker-cpp-experiments

./: .gitignore  .travis.yml  Dockerfile  Dockerfile.build  Dockerfile.dev  README.MD  docker-compose.build.yml  docker-compose.yml
.build/: Dockerfile  build-and-test.sh  build-container.sh  run-bash.sh  run-inside.sh
src/: CMakeLists.txt  Calc.cpp  Calc.h  CalcTest.cpp  main.cpp
